refactor : 최근 본 상품 각 카테고리에 가중치 적용